# TubeTalk

./: LICENSE  README.md  UI.py  main.py  pyproject.toml
UI/: css.py
docs/: UI.md  llm_service.md  youtube_service.md
services/: llm_service.py
src/: main.py
src/UI/: html_snippet.py  index.py
src/configs/: prompts.py  streamlit_config.py
src/services/: __init__.py  llm_service.py  youtube_service.py  youtube_video.py
